add menu and update index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </section>
             <!-- sidebar -->
             <section class="sidebar">
-                <a href="#">menu</a>
+                <a href="Menu.html">menu</a>
                 <a href="#">order</a>
                 <a href="#">about us</a>
                 <a href="Contact.html">contact us</a>
