add pics of cooked chicken to menu page

--- a/Menu.html
+++ b/Menu.html
@@ -86,27 +86,27 @@
                 <div>
                     <!-- container for image -->
                     <div>
-                        
+                        <img src="images/southwest-chicken.jpg" alt="southwest chicken">
                     </div>
-                    <h2></h2>
+                    <h2>Southwest Chicken</h2>
                 </div>
                 <div>
                     <div>
-
+                        <img src="images/grilled-chicken.jpg" alt="grilled chicken">
                     </div>
-                    <h2></h2>
+                    <h2>Grilled Chicken</h2>
                 </div>
                 <div>
                     <div>
-
+                        <img src="images/boneless-wings.jpg" alt="boneless wings">
                     </div>
-                    <h2></h2>
+                    <h2>Boneless Wings</h2>
                 </div>
                 <div>
                     <div>
-                        
+                        <img src="images/fried-chicken.jpg" alt="fried chicken">
                     </div>
-                    <h2></h2>
+                    <h2>Ray's Specialty Fried Chicken</h2>
                 </div>
 
             </section>
