add styles to index page

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <!-- hero section -->
             <section class="hero">
                 <!-- image container for hero section -->
-                <div>
+                <!-- <div>
                     <img src="images/hero.jpg" alt="People eating burgers">
-                </div>
+                </div> -->
                 <h1>347 Chester Street, CA 91608</h1>
             </section>
             <!-- sidebar -->
@@ -45,8 +45,8 @@
             <section>
                 <h1>Ray's Way</h1>
                 <!-- image conatiner -->
-                <div>
-                    <img src="images/ray.jpg" alt="old man ray">
+                <div class="ray">
+                    <!-- <img src="images/ray.jpg" alt="old man ray"> -->
                 </div>
                 <article>
                     <h2>Ray's Backstory</h2>
