add navbar to menu page

--- a/Menu.html
+++ b/Menu.html
@@ -16,6 +16,22 @@
         <header>
             <!-- page name -->
             <h1>menu</h1>
+                    <!--Tab Links-->
+            <nav>
+                <section class="sidebar">
+                    <table class="center">
+                        <tr>
+                            <th><a href="index.html">Home</a></th>
+                            <th><a href="#">Careers</a></th>
+                            <th><a href="Menu.html">Menu</a></th>
+                            <th><a href="#">Order-Online</a></th>
+                            <th><a href="#">About</a></th>
+                            <th><a href="Contact.html">Contact</a></th>
+                        </tr>
+                    </table>
+                </section>
+            </nav>
+
         </header>
         <main>
             <!-- menu categories -->
