connect google fonts and resize menu page images

--- a/Menu.html
+++ b/Menu.html
@@ -10,7 +10,9 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="CSS/styles.css">
     </head>
     <body>
         <header>
@@ -41,25 +43,25 @@
                 <!-- container for image and heading -->
                 <div>
                     <!-- container for image -->
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/fillet-mignon.jpg" alt="fillet mignon">
                     </div>
                     <h2>Fillet Mignon</h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/ribeye.jpg" alt="ribeye steak">
                     </div>
                     <h2>Ribeye</h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/porterhouse.jpg" alt="porterhouse steak">
                     </div>
                     <h2>Porterhouse</h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/sirloin.jpg" alt="sirloin steak">
                     </div>
                     <h2>Sirloin</h2>
@@ -71,25 +73,25 @@
                 <!-- container for image and heading -->
                 <div>
                     <!-- container for image -->
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/classic-burger.jpg" alt="burger">
                     </div>
                     <h2></h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/double-stacked-bbq-burger.jpg" alt="bbq burger">
                     </div>
                     <h2></h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/rays-secret-sauce-burger.jpg" alt="secret sauce burger">
                     </div>
                     <h2></h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/southwest-burger.jpg" alt="southwest burger">
                     </div>
                     <h2></h2>
@@ -101,25 +103,25 @@
                 <!-- container for image and heading -->
                 <div>
                     <!-- container for image -->
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/southwest-chicken.jpg" alt="southwest chicken">
                     </div>
                     <h2>Southwest Chicken</h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/grilled-chicken.jpg" alt="grilled chicken">
                     </div>
                     <h2>Grilled Chicken</h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/boneless-wings.jpg" alt="boneless wings">
                     </div>
                     <h2>Boneless Wings</h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/fried-chicken.jpg" alt="fried chicken">
                     </div>
                     <h2>Ray's Specialty Fried Chicken</h2>
@@ -131,27 +133,27 @@
                 <!-- container for image and heading -->
                 <div>
                     <!-- container for image -->
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/apple-pie.jpg" alt="apple pie">
                         
                     </div>
                     <h2>Apple Pie</h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/chocolate-cake.jpg" alt="chocolate cake">
 
                     </div>
                     <h2>Chocolate Cake</h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/hot-fudge.jpg" alt="hot fudge sundae">
                     </div>
                     <h2>Hot Fudge Sunday</h2>
                 </div>
                 <div>
-                    <div>
+                    <div class="menu-food-img">
                         <img src="images/ice-cream.jpg" alt="Ice Cream and Soda Float">
                     </div>
                     <h2>Ice Cream & Soda Float</h2>
