add grid postioning to menu page imgs

--- a/Menu.html
+++ b/Menu.html
@@ -37,7 +37,7 @@
         </header>
         <main>
             <!-- menu categories -->
-            <section>
+            <section class="steak-sect">
                 <h1>Steaks</h1>
                 <p>Juicy steaks grilled to perfection</p>
                 <!-- container for image and heading -->
@@ -68,7 +68,7 @@
                 </div>
 
             </section>
-            <section>
+            <section class="burger-sect">
                 <h1>Burgers</h1>
                 <!-- container for image and heading -->
                 <div>
@@ -98,7 +98,7 @@
                 </div>
                 
             </section>
-            <section>
+            <section class="chicken-sect">
                 <h1>Chicken</h1>
                 <!-- container for image and heading -->
                 <div>
@@ -128,7 +128,7 @@
                 </div>
 
             </section>
-            <section>
+            <section class="dessert-sect">
                 <h1>Dessert</h1>
                 <!-- container for image and heading -->
                 <div>
